Mon message de commit

--- a/public/csssss.css
+++ b/public/csssss.css
@@ -636,4 +636,8 @@ h3 {
       height: 200px;
     }
   }
-  
+  .out-of-stock {
+    background-color: red;
+    color: white;
+    cursor: not-allowed;
+}
