--- a/public/Exchangecss.css
+++ b/public/Exchangecss.css
@@ -2,7 +2,9 @@
         body { background: url('img/backgroundmain.jpg') no-repeat center center/cover fixed; display: flex; flex-direction: column; min-height: 100vh; background-size: cover; }
         
         .navbar { flex-wrap: wrap; padding: 10px; display: flex; background-color: transparent; align-items: center; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); justify-content: space-between; }
-        .logo img { height: clamp(40px, 8vw, 50px); }
+        .logo img {
+            height: 80px;
+        }
         .navbar ul { flex: 1; margin: 10px 0; display: flex; list-style: none; margin-left: 20px; padding: 0; }
         .navbar ul li { margin: 0 15px; }
         .navbar ul li a { text-decoration: none; color: white; font-size: 18px; font-weight: bold; padding: 8px 15px; transition: 0.3s; }
@@ -227,4 +229,8 @@
               opacity: 1;
               transform: translateY(0);
             }
-          }
+          }.navbar ul li a.active {
+    font-weight: bold;
+    color: red;  
+    text-decoration: underline;
+}
