--- a/public/pricing.css
+++ b/public/pricing.css
@@ -18,10 +18,11 @@
     background: white;
     padding: 10px 20px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    gap: 20px;
+    
 }
 .logo img {
-    height: 150px;
-    width: auto;
+    height: 60px;
 }
 .navbar ul {
     display: flex;
@@ -320,4 +321,9 @@ body {
     .nav-icons {
         margin: 10px auto;
     }
+}
+.navbar ul li a.active {
+    font-weight: bold;
+    color: red;  
+    text-decoration: underline;
 }
