--- a/public/checkout.css
+++ b/public/checkout.css
@@ -54,7 +54,7 @@ body {
 
 .navbar ul li a {
     text-decoration: none;
-    color: white;
+    color: black;
     font-size: 18px;
     font-weight: bold;
     padding: 8px 15px;
