--- a/public/login-pag.css
+++ b/public/login-pag.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'cormorant', sans-serif;
+    font-family: "Cormorant Garamond", serif;
 }
 
 body {
@@ -54,7 +54,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: linear-gradient(to bottom right, #f7f9fc, #e3e9f1);
+    background-color:white;
     padding: 20px;
     
 }
@@ -179,5 +179,30 @@ h2 {
     .login-right {
         flex: none;
         height: 100vh;
+    }
+}
+@media (max-width: 768px) {
+    .login-wrapper {
+        flex-direction: column;
+    }
+
+    .login-left {
+        display: block;
+        width: 100%;
+        height: 50vh; /* Show 50% of the screen height */
+        position: relative;
+    }
+
+    .login-image {
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .login-right {
+        flex: none;
+        height: 50vh; /* The remaining 50% */
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
