--- a/public/register.css
+++ b/public/register.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Cormorant', serif; 
+    font-family: "Cormorant Garamond", serif;
 }
 
 body {
@@ -127,6 +127,8 @@ h2 {
     font-size: 18px;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.3s; 
+    margin-top: 5px;
+
 }
 
 .btn-submit:hover {
@@ -205,12 +207,12 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
+    background-color: linear-gradient(to bottom right, #f7f9fc, #e3e9f1);
     padding: 20px;
 }
 
 .register-container {
-    background: rgba(250, 250, 250, 0.95);
+    background: white;
     padding: 40px;
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
     width: 100%;
